# qcar2_sim

./: .gitignore  README.md
src/husarion_gz_worlds/: CMakeLists.txt
src/husarion_gz_worlds/config/: teleop.config
src/husarion_gz_worlds/worlds/: lab_track.sdf
src/rosbot_ros/: .pre-commit-config.yaml  CONTRIBUTING.md  MANIPULATOR.md  README.md  ROS_API.md
src/rosbot_ros/docker/: Dockerfile.hardware  compose.rosbot.yaml  compose.rosbot_xl.yaml
src/rosbot_ros/rosbot/: CHANGELOG.rst  package.xml  rosbot_hardware.repos  rosbot_simulation.repos
src/rosbot_ros/rosbot_bringup/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_bringup/launch/: bringup.yaml  microros.launch.py  rosbot.yaml  rosbot_xl.yaml
src/rosbot_ros/rosbot_bringup/test/: test_utils.py
src/rosbot_ros/rosbot_controller/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_controller/launch/: controller.yaml
src/rosbot_ros/rosbot_description/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_description/launch/: rosbot_xl.yaml
src/rosbot_ros/rosbot_description/rviz/: rosbot.rviz
src/rosbot_ros/rosbot_gazebo/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_gazebo/launch/: simulation.yaml  spawn_robot.yaml
src/rosbot_ros/rosbot_hardware_interfaces/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_hardware_interfaces/src/: rosbot_imu_sensor.cpp  rosbot_system.cpp
src/rosbot_ros/rosbot_joy/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_joy/config/: config.yaml
src/rosbot_ros/rosbot_localization/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_moveit/: CHANGELOG.rst  package.xml
src/rosbot_ros/rosbot_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/rosbot_ros/rosbot_utils/config/rosbot_xl/: config.yaml
src/rosbot_ros/rosbot_utils/launch/: battery_alert.yaml
src/rosbot_ros/rosbot_utils/rosbot_utils/: mcu_manager_ftdi.py  mcu_manager_uart.py
src/rosbot_ros/rosbot_utils/scripts/: battery_alert  configure_robot  create_config_dir  flash_firmware  install_udev_rules  led_strip_car_wave  led_strip_rainbow
src/rosbot_ros/rosbot_utils/src/: battery_alert_parameters.yaml
src/rosbot_ros/rosbot_utils/udev/: 99-rosbot.rules
src/urdf_representations/: README.md
src/urdf_representations/qarm/: model.config  package.xml  readme.md
src/urdf_representations/qarm/urdf/: QARM.urdf
src/urdf_representations/qarm_gripper/: CMakeLists.txt  model.config  package.xml  readme.md
src/urdf_representations/qarm_gripper/config/: joint_names_qarm_gripper.yaml
src/urdf_representations/qarm_gripper/launch/: display.launch  gazebo.launch
src/urdf_representations/qarm_gripper/meshes/: Link2A.STL  Link2B.STL
src/urdf_representations/qarm_gripper/urdf/: qarm_gripper.urdf
src/urdf_representations/qbot2e/: model.config  package.xml  readme.md
src/urdf_representations/qbot_platform/: CMakeLists.txt  model.config  package.xml  readme.md
src/urdf_representations/qcar/: model.config  package.xml  readme.md
src/urdf_representations/qcar2/: CMakeLists.txt  model.config  package.xml  readme.md
src/urdf_representations/qcar2/meshes/: QCar2Body.stl  QCar2Lidar.stl
src/urdf_representations/qcar2/urdf/: QCar2.urdf
src/urdf_representations/qdrone2/: CMakeLists.txt  model.config  package.xml  readme.md
src/urdf_representations/qdrone2/launch/: gazebo.launch
src/urdf_representations/qdrone2/meshes/: motor_prop_assembly.dae  qdrone2_motor_prop.stl
src/urdf_representations/qdrone2/urdf/: qdrone2.urdf
(+15 files in other folders)
