<package format="2">
  <name>QArm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for the Quanser QArm</p>
    <p>This package contains configuration data, 3D models and launch files
for the Quanser QArm manipulator</p>
  </description>
  <author>Quanser</author>
  <maintainer email="tech@quanser.com" />
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>