<package>
  <name>qdrone2</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for Quanser's QDrone2
  </description>
  <author>Quanser</author>
  <maintainer email="tech@quanser.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
</package>